# dev-assist

./: .env.example  .gitignore  .lintstagedrc.json  ARCHITECTURE.md  AUTH_FIX_SUMMARY.md  DATABASE_RESET_SUMMARY.md  DEVHUB-019-IMPLEMENTATION.md  DEVHUB-021-IMPLEMENTATION.md  DEVHUB-023-IMPLEMENTATION.md  DEVHUB-024-IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPENAI_INTEGRATION.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
apps/api/: Dockerfile  db_test.py  fly.toml  package.json  pyproject.toml
apps/api/src/devhub/: main.py
apps/api/src/devhub/adapters/auth/: cipher.py  jwt.py
apps/api/src/devhub/adapters/cache/: redis.py
apps/api/src/devhub/adapters/llm/: client.py
apps/api/src/devhub/adapters/mcp/: registry.py  tool_wrapper.py
apps/api/src/devhub/adapters/oauth/: providers.py
apps/api/src/devhub/adapters/persistence/: checkpointer.py  database.py  models.py  repositories.py
apps/api/src/devhub/adapters/streaming/: event_store.py  sse.py
apps/api/src/devhub/api/: deps.py  error_handlers.py  middleware.py
apps/api/src/devhub/api/routers/: auth.py  health.py  mcp_connections.py  oauth_connect.py  runs.py  threads.py
apps/api/src/devhub/application/use_cases/: create_thread.py  delete_thread.py  expire_approvals.py  get_thread.py  list_threads.py  resume_run.py  run_events.py  start_run.py  update_thread.py
apps/api/src/devhub/core/: errors.py  logging.py  settings.py
apps/api/src/devhub/domain/: INTEGRATION_GUIDE.md  README.md  agent_state.py  hitl_interrupt.py  models.py  ports.py
apps/api/src/devhub/domain/agents/: __init__.py  base.py  code_searcher.py  doc_writer.py  echo_specialist.py  issue_triager.py  pr_reviewer.py  supervisor.py
apps/api/src/devhub/domain/graphs/: supervisor.py
apps/api/tests/: test_code_searcher.py  test_doc_writer.py  test_error_handlers.py  test_health.py  test_hitl_interrupts.py  test_issue_triager.py  test_mcp_registry.py  test_oauth_connector.py  test_pr_reviewer.py  test_streaming.py  test_supervisor_graph.py  test_threads_vertical_slice.py
(+156 files in other folders)
