[project]
name = "devhub-api"
version = "0.1.0"
description = "DevHub AI FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.10",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/devhub"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
